# data-engineering

./: .gitignore  .gitmodules  CLAUDE.md  CODEOWNERS  Dockerfile  README.md  __init__.py  constants.py  justfile  prefect_1_dbt_flow_with_repo_clone  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  terraform-validate.yml
airflow/: requirements.txt
airflow/dags/: test_db_conn.py  vacuum_cleanup.py
airflow/dags/operators/: dbt.py  postgres_connection.py
archive/dagster/: GOOGLE_CREDENTIALS_example.json  file_generation_ops.py  google_drive_io_manager.py  utils.py
archive/dbt/: .gitignore  .pre-commit-config.yaml
archive/temporal/: temporal_bootstrap_task_def.json  temporal_cluster_task_def.json
cureatr/: jobs.py  report_headers.py  sql.py  utils.py
dagster/: __init__.py  dbt_asset.py  example_multi_file_automation.py  example_single_file_generation.py  import_sql_dataclass.py  io_manager.py  test_files.py
dagster-datawarehouse/: .gitignore  Dockerfile  README.md  pyproject.toml
dagster-datawarehouse/company/: __init__.py  jobs.py  report_headers.py  sql.py
dagster-datawarehouse/cureatr/: __init__.py
dagster-datawarehouse/data-warehouse/: .sqlfluff  dbt_project.yml
data-warehouse/: README.md  dbt_project.yml  packages.yml  profiles.yml
data-warehouse/notebooks/: backfill_adeid.ipynb
data-warehouse/requirements/: requirements-dev.txt
data-warehouse/seeds/: stg_cureatr__holiday_calendar.csv
dbt/: .sqlfluffingnore  README.md  dbt_project.yml  profiles.yml
dbt/macros/: import.sql  import.yml
dbt/requirements/: requirements-dev.in
docs/: architecture-patterns.md  tool-comparison.md
extract_load/_template/: README.md
extract_load/airbyte/: CLAUDE.md  README.md  mod.just
extract_load/dlt/: CLAUDE.md  README.md  mod.just  pyproject.toml  test_pipeline.duckdb
extract_load/dlt/dlt_pipelines.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
extract_load/dlt/pipelines/: example_pipeline.py
extract_load/dlt/tests/: test_pipeline.py
orchestration/_template/: README.md
orchestration/airflow/: CLAUDE.md  Dockerfile  README.md  docker-compose.yml  mod.just  pyproject.toml
orchestration/airflow/airflow_orchestration.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
orchestration/airflow/dags/: airbyte_sync.py  dbt_transform.py  full_pipeline.py
orchestration/airflow/dags/sensors/: s3_file_sensor.py
orchestration/airflow/tests/: conftest.py  test_dags.py  test_tasks.py
orchestration/dagster/: CLAUDE.md  Dockerfile  README.md  dagster.yaml  mod.just  pyproject.toml  workspace.yaml
orchestration/dagster/dagster_orchestration.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
orchestration/dagster/src/: __init__.py
orchestration/dagster/src/assets/: __init__.py  airbyte.py  dbt.py
orchestration/dagster/src/checks/: __init__.py  freshness.py
orchestration/dagster/src/resources/: __init__.py  connections.py
orchestration/dagster/src/schedules/: __init__.py  daily.py
orchestration/dagster/src/sensors/: __init__.py  s3_sensor.py
orchestration/dagster/src/utils/: __init__.py  alerts.py  factories.py
orchestration/dagster/tests/: conftest.py  test_assets.py  test_checks.py  test_resources.py  test_schedules.py  test_sensors.py
orchestration/prefect/: CLAUDE.md  Dockerfile  README.md  mod.just  pyproject.toml
orchestration/prefect/blocks/: connections.py
orchestration/prefect/flows/: airbyte_sync.py  dbt_transform.py  example_flow.py  full_pipeline.py
orchestration/prefect/flows/sensors/: s3_sensor.py
orchestration/prefect/prefect_orchestration.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
orchestration/prefect/schedules/: daily.py
orchestration/prefect/tests/: conftest.py  test_flows.py  test_tasks.py
orchestration/temporal/: CLAUDE.md  README.md  docker-compose.yml  mod.just  pyproject.toml
orchestration/temporal/activities/: example_activity.py
orchestration/temporal/temporal_orchestration.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
orchestration/temporal/tests/: test_activities.py  test_workflows.py
orchestration/temporal/workers/: worker.py
orchestration/temporal/workflows/: example_workflow.py
stacks/_template/: README.md
stacks/airbyte-dagster-dbt/: README.md  docker-compose.yml
stacks/dlt-dagster-dbt/: README.md
stacks/dlt-temporal-dbt/: README.md
temporal/: readme.md
transformation/_template/: README.md
transformation/dbt/: .pre-commit-config.yaml  .sqlfluff  CLAUDE.md  README.md  dbt_project.yml  mod.just  packages.yml  profiles.yml
(+288 files in other folders)
