[project]
name = "dlt-pipelines"
version = "0.1.0"
description = "Data ingestion pipelines built with dlt"
requires-python = ">=3.10"
dependencies = [
    "dlt[duckdb,snowflake,filesystem]>=0.5.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
