[project]
name = "dagster-orchestration"
version = "0.1.0"
description = "Composable data engineering toolkit powered by Dagster"
requires-python = ">=3.11"
dependencies = [
    "dagster>=1.6,<2.0",
    "dagster-webserver>=1.6,<2.0",
    "dagster-dbt>=0.22,<1.0",
    "dagster-airbyte>=0.22,<1.0",
    "dagster-snowflake>=0.22,<1.0",
    "boto3>=1.28,<2.0",
    "dbt-core>=1.7,<2.0",
    "dbt-snowflake>=1.7,<2.0",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver>=1.6,<2.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.dagster]
module_name = "src"
