[project]
name = "prefect-orchestration"
version = "0.1.0"
description = "Prefect flows for data pipeline orchestration"
requires-python = ">=3.10"
dependencies = [
    "prefect>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
